# CFIFS

./: .gitignore  README.md  cfifs_demo.py  pyproject.toml
example/: emotions_fold0.mat
scripts/: README.md  aggregate_kgrid_and_make_tables.py  build_panorama30_root.py  eval_rankings_gpu_mlknn.py  export_dense_benchmark_to_mat.py  freeze_panorama_cv10.py  make_cfifs_ablation_tables.py  make_method_figures.py  make_paper_materials.py  make_pgrid_curves.py  run_cfifs.py  run_cfifs_ablation.py  run_rfsfs.py
src/mlfs/: __init__.py  cfifs_embedded.py  ml_knn_gpu.py  spectral_mlfs.py
src/mlfs/_components/: __init__.py  instance_weights.py
