[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfifs"
version = "1.0.0"
description = "CFIFS: Choquet Fuzzy-Integral Feature Selection for Multi-Label Data"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Filippo Casu" },
  { name = "Andrea Lagorio" },
  { name = "Giuseppe A. Trunfio" },
]
license = { text = "MIT" }
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
experiments = [
  "scipy>=1.10",
  "scikit-learn>=1.2",
  "scikit-multilearn>=0.2.0",
  "matplotlib>=3.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
